# yaml-to-go

./: .gitignore  BUILD.bazel  FORMATTING_ETH2_SPEC_TESTS.md  LICENSE  README.md  WORKSPACE  main.ts  package-lock.json  package.json  tsconfig.json  yaml-to-go.ts
test/: BUILD.bazel  sszminimalone.yaml.go  yaml_test.go
yaml-hex-to-base64/: BUILD.bazel  hex-to-base64.ts  main.ts
