load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude node_modules
# gazelle:prefix github.com/prysmaticlabs/yaml-to-go
gazelle(name = "gazelle")

exports_files(
    ["tsconfig.json"],
    visibility = ["//:__subpackages__"],
)

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

ts_library(
    name = "lib",
    srcs = ["yaml-to-go.ts"],
    deps = [
        "@npm//yaml",
        "@npm//@types/yaml",
    ],
)

ts_library(
    name = "main",
    srcs = ["main.ts"],
    deps = [
        ":lib",
        "@npm//@types/node",
    ],
)

nodejs_binary(
    name = "bin",
    data = [
        ":main",
    ],
    entry_point = "yaml_to_go/main",
)

