load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    testonly = 1,
    srcs = ["sszminimalone.yaml.go"],
    importpath = "github.com/prysmaticlabs/yaml-to-go/test",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["yaml_test.go"],
    data = [":ssz_minimal_one.yaml"],
    embed = [":go_default_library"],
    deps = ["@com_github_ghodss_yaml//:go_default_library"],
)
